--- a/backroom.html
+++ b/backroom.html
@@ -8,7 +8,10 @@
   body {
     margin: 0;
     height: 100vh;
-    background: #000;
+    background: 
+      linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+      url('https://images.unsplash.com/photo-1556740749-887f6717d7e4?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+    background-size: cover;
     color: #39ff14;
     font-family: monospace;
     display: flex;
@@ -16,9 +19,9 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    position: relative;
     padding: 40px 20px;
     text-align: center;
+    position: relative;
   }
   .shadow-text {
     position: absolute;
@@ -27,7 +30,7 @@
     transform: translate(-50%, -50%);
     font-size: 6rem;
     font-weight: bold;
-    color: rgba(255, 0, 0, 0.03); /* Very faint red */
+    color: rgba(255, 0, 0, 0.03);
     text-shadow:
       0 0 20px rgba(255, 0, 0, 0.02),
       0 0 40px rgba(255, 0, 0, 0.01);
