--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Glitch Store with AI Guide</title>
+<title>Glitch Store with VOID-11 HARPER</title>
 <style>
   body {
     background-color: black;
@@ -36,6 +36,7 @@
     animation: flicker 2s infinite;
     align-items: center;
     justify-content: space-between;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
   }
   .item img {
     width: 80px;
@@ -43,9 +44,23 @@
     transition: filter 0.3s, transform 0.2s;
     margin-right: 15px;
   }
-  .item img:hover {
+  /* Good next item hover glow */
+  .item.good-hover:hover {
     filter: contrast(200%) hue-rotate(90deg) saturate(2);
     transform: scale(1.1) rotate(-2deg);
+    border-color: #39ff14;
+    box-shadow: 0 0 15px #39ff14;
+  }
+  /* Wrong next item hover glow */
+  .item.wrong-hover:hover {
+    border-color: crimson;
+    box-shadow:
+      0 0 15px crimson,
+      0 0 30px crimson inset;
+  }
+  .item.wrong-hover:hover img {
+    filter: contrast(150%) saturate(4) drop-shadow(0 0 5px crimson);
+    transform: scale(1.05) rotate(1deg);
   }
   .item-info {
     flex-grow: 1;
@@ -145,6 +160,10 @@
   .chat-message.bot {
     color: #ff0044;
   }
+  .chat-message.user {
+    color: #39ff14;
+    text-align: right;
+  }
   #chat-input-area {
     display: flex;
     border-top: 1px solid #39ff14;
@@ -199,7 +218,7 @@
 
 <!-- Chatbot UI -->
 <div id="chatbot">
-  <div id="chat-header">AI Guide</div>
+  <div id="chat-header">VOID-11 HARPER</div>
   <div id="chat-messages"></div>
   <div id="chat-input-area">
     <input id="chat-input" type="text" placeholder="Ask for a hint or say hello..." />
@@ -247,6 +266,14 @@ function renderStore(){
     div.className = 'item';
 
     const canAfford = (balance >= item.price);
+    const nextIndex = secretSequence[cart.length];
+    let hoverClass = '';
+    if(index === nextIndex){
+      hoverClass = 'good-hover';
+    } else {
+      hoverClass = 'wrong-hover';
+    }
+
     div.innerHTML = `
       <img src="${item.img}" alt="${item.name}">
       <div class="item-info">
@@ -255,6 +282,10 @@ function renderStore(){
       </div>
       <button ${canAfford ? '' : 'disabled'} onclick="addToCart(${index})">Add to Cart</button>
     `;
+
+    div.classList.add(hoverClass);
+    div.querySelector('img').classList.add(hoverClass);
+
     storeElement.appendChild(div);
   });
   updateBalanceDisplay();
@@ -350,7 +381,7 @@ checkoutBtn.onclick = checkout;
 renderStore();
 renderCart();
 
-/* ----------------- Chatbot logic ----------------- */
+/* ----------------- VOID-11 HARPER Chatbot logic ----------------- */
 const chatMessages = document.getElementById('chat-messages');
 const chatInput = document.getElementById('chat-input');
 const chatSendBtn = document.getElementById('chat-send-btn');
@@ -363,48 +394,47 @@ function appendMessage(text, sender='bot'){
   chatMessages.scrollTop = chatMessages.scrollHeight;
 }
 
-// Simple keyword-based replies
+// Cryptic, mysterious chatbot replies
 function getBotReply(input){
   input = input.toLowerCase().trim();
 
   if(input.includes('hello') || input.includes('hi') || input.includes('hey')){
-    return "Greetings, seeker. Choose carefully. The order is everything.";
+    return "…You have wandered far. But the sequence bends like shadows in the void.";
   }
   if(input.includes('hint')){
-    return "The key lies not in what you buy, but in how you buy it.";
+    return "The path is not linear, yet each step is destined. Listen closely to silence between purchases.";
   }
   if(input.includes('key')){
-    return "The Rusty Key is more than it seems. It opens doors... if you respect its place.";
+    return "A key rusted with time. It whispers of locked doors that should not open yet.";
   }
   if(input.includes('lighthouse')){
-    return "Fog shrouds the lighthouse, but its light guides the patient.";
+    return "A beacon obscured by fog. It flickers only for those who watch patiently.";
   }
   if(input.includes('storm')){
-    return "The storm rages, but calm minds prevail.";
+    return "Raging waters churn secrets beneath calm surfaces.";
   }
   if(input.includes('forest')){
-    return "Misty forests hide secrets best uncovered step by step.";
+    return "Among the misted trees, footprints vanish and return elsewhere.";
   }
   if(input.includes('decay')){
-    return "Urban decay reveals forgotten truths to those who look closely.";
+    return "Decay conceals, but also reveals — tread with measured steps.";
   }
   if(input.includes('order')){
-    return "The sequence must be precise. One misstep resets the journey.";
+    return "Order is a fragile illusion. Break it and all resets.";
   }
   if(input.includes('money') || input.includes('skull')){
-    return "Your skulls are finite. Spend wisely or be left wanting.";
+    return "Skulls are finite. Spend them, but do not squander your essence.";
   }
   if(input.includes('cart')){
-    return "Your cart holds your fate. Fill it with care.";
+    return "Your cart cradles fate — choose what lingers and what fades.";
   }
 
-  // Default mysterious reply
   const responses = [
-    "I see shadows in your choices...",
-    "Are you sure that's the right item?",
-    "The void is patient. So must you be.",
-    "Trust the sequence. It watches.",
-    "Not all is as it appears here..."
+    "…Listen. The void murmurs your missteps.",
+    "The wrong choice casts a long shadow.",
+    "Trust in the unseen pattern, for sight betrays.",
+    "A single misstep fractures the sequence.",
+    "Not all items are meant to be bought first."
   ];
   return responses[Math.floor(Math.random() * responses.length)];
 }
@@ -429,7 +459,7 @@ chatInput.addEventListener('keydown', (e) => {
 });
 
 // Greet on load
-appendMessage("Welcome to the Glitch Store. Need a hint? Just ask.", 'bot');
+appendMessage("VOID-11 HARPER online. Need a hint? Speak softly...", 'bot');
 </script>
 
 </body>
